# shader-playground

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  accumulation.wgsl  audio_weights.json  build.rs  flame_compute.wgsl  histogram_cdf.wgsl  params.json  playground.wgsl  weights.json
.plans/: 2026-03-14-evolution-overhaul-design.md  2026-03-14-evolution-overhaul-plan.md  2026-03-14-rendering-pipeline-v2.md  2026-03-14-rendering-v2-surgical.md  2026-03-17-dancers-design.md  2026-03-17-dancers-plan.md  2026-03-17-hud-overlay-design.md  2026-03-17-hud-overlay-plan.md  2026-03-17-render-thread.md  2026-03-17-spanda-game-design.md  2026-03-17-spanda-m0-plan.md  gemini-gpu-abstraction-prompt.md  gemini-rendering-pipeline-prompt.md  gemini-rendering-research-results.md  gemini-taste-mutation-prompt.md  rendering-v2-learnings.md  restir-design.md
docs/: README.md  index.html  package.json
docs/audio/: README.md  signal-mapping.md
docs/config/: README.md  signal-weights.md
docs/genetics/: README.md  breeding.md  genome-format.md  mutation.md  persistence.md
docs/plans/: 2026-03-04-audio-reactivity-design.md  2026-03-04-audio-reactivity-implementation.md  2026-03-04-flame-genome-design.md  2026-03-04-flame-genome-implementation.md  2026-03-05-variable-transforms-design.md  2026-03-05-variable-transforms-plan.md  2026-03-07-audio-normalization-design.md  2026-03-07-audio-normalization-plan.md  2026-03-07-audio-reactivity-v2-design.md  2026-03-07-audio-reactivity-v2-plan.md  2026-03-07-electric-sheep-phase2-plan.md  2026-03-07-electric-sheep-quality-design.md  2026-03-07-electric-sheep-quality-plan.md  (+13 more)
genomes/: archive.json  captured-1639.json  captured-2094.json  captured-5863.json  captured-7418.json  captured-9062.json  dancer_archive.json  default.json  lineage.json  mutant-2502.json  mutant-4488.json  mutant-6654.json  mutant-9982.json  perf_model.json  taste_model.json  votes.json
macos/: Info.plist
scripts/: bundle.sh  pre-commit
src/: archive.rs  audio.rs  audio_weights.rs  dancer.rs  device_picker.rs  flam3.rs  genome.rs  main.rs  sck_audio.rs  taste.rs  votes.rs  weights.rs
(+1270 files in other folders)
