[package]
name = "shader-playground"
version = "0.1.0"
edition = "2024"

[dependencies]
wgpu = "28"
winit = "0.30"
notify = "8"
serde_json = "1"
rand = "0.9"
serde = { version = "1", features = ["derive"] }
bytemuck = { version = "1.25", features = ["derive"] }
pollster = "0.4"
log = "0.4"
env_logger = "0.11"
cpal = "0.17"
rustfft = "6.4"
screencapturekit = "1"
